# med-seg-fm

./: .gitignore  .gitmodules  Makefile  README.md  citation.cff  pyproject.toml  vista3d.yaml
src/segFM/: checkpoints.py  color_classes.py  logger.py  prompts.py  utils.py
src/segFM/DataLoaders/: amos22.py  bagls.py  base_dataset.py  brain_em.py  brats_medical_decathlon.py  endoscapes.py  flare22.py  imed361.py  medical_decathlon.py  medsegbench.py  neopolyp.py  refuge2.py  toothfairy3.py  vfss.py
src/segFM/DatasetEvaluation/Amos22/: eval.py
src/segFM/DatasetEvaluation/Amos22/results/: print_metrics.py  radarplot.py
src/segFM/DatasetEvaluation/BAGLS/SAMv2/: eval.py  plot.py  tune.py  yolo_table.py
src/segFM/DatasetEvaluation/BAGLS/U_Net/: eval.py  train.py
src/segFM/DatasetEvaluation/BrainEM/: eval.py
src/segFM/DatasetEvaluation/FLARE22/: eval.py
src/segFM/DatasetEvaluation/IMed361/: eval.py  test.py
src/segFM/DatasetEvaluation/MedSegBench/: eval.py
src/segFM/DatasetEvaluation/MedicalDecathlon/: eval_single_object.py
src/segFM/DatasetEvaluation/Neopolyp/: automatik_mask_generator.py  eval _bob.py  eval.py  plot.py
src/segFM/DatasetEvaluation/ToothFairy3/: eval.py
src/segFM/DatasetEvaluation/VFSS/: eval.py
src/segFM/DatasetEvaluation/endoscapes/: eval.py
src/segFM/MedMaskGenerator/: MedSAM2AutomaticMaskGenerator.py
src/segFM/predictors/: BaseSegmenter.py  bagls_unet.py  medicosam.py  medsam_3d.py  nnInteractive_3d.py  sam2_2d.py  sam2_3d.py  sam2_3d_efficient.py  sam3_2d.py  sam3_3d.py  samMed3d.py  sam_med2d.py  vista_3d.py
(+62 files in other folders)
