[project]
name = "SegFM"
version = "0.1"
authors = [
  { name="TODO", email="anonymous" },
]
description = "Comparison of segmentation foundation models for medical imaging"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

[build-system]
requires = [
    "setuptools==70.2.0"
    ]
build-backend = "setuptools.build_meta"